# Rust_Fundamentals

./: C35_test.jsonl  C35_train.jsonl  Cargo.toml  code_35_train.jsonl  techstack.md  techstack.yml
api_pro/: Cargo.toml
api_pro/src/: main.rs
auto_gipty/: Cargo.toml
auto_gipty/src/: main.rs
auto_gipty/src/apis/: call_request.rs
auto_gipty/src/helpers/: command_line.rs  general.rs
auto_gipty/src/models/agent_basic/: basic_agent.rs  basic_traits.rs
auto_gipty/src/models/agents/: agent_architect.rs  agent_backend.rs  agent_traits.rs  mod.rs
file_test/: Cargo.toml
file_test/schemas/: api.json
file_test/src/: command_line_api.rs  main.rs
martin_lib/: Cargo.toml
martin_lib/src/: lib.rs
rust_auto_gpt/schemas/: api_schema.json
rust_auto_gpt/src/apis/: call_request.rs
rust_auto_gpt/src/helpers/: general.rs
rust_starter/src/: my_funcs.rs
rust_starter/src/other_funcs/: divide_funcs.rs  mod.rs
rust_web_template/src/: code_template.rs  index.html  main.rs
src/: main.rs  my_funcs.rs
src/other_funcs/: divide_funcs.rs
syntax_ground/: Cargo.toml
syntax_ground/ai_macro/: Cargo.toml
syntax_ground/ai_macro/src/: lib.rs
syntax_ground/my_proc_macro/: Cargo.toml
syntax_ground/my_proc_macro/src/: lib.rs
syntax_ground/my_proc_macro/web_template/: Cargo.toml
syntax_ground/my_proc_macro/web_template/src/: code_template.rs  main.rs  old_main.rs
syntax_ground/src/: m12_concurrency.rs  m1_enums.rs  m2_structs.rs  m3_traits.rs  m4_polymorphism.rs  m5_lifetimes.rs  m6_patterns.rs  m7_async.rs  m8_collections.rs  m9_decl_macros.rs  main.rs
(+6 files in other folders)
