[package]
name = "syntax_ground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = "2.0.10"
proc-macro2 = "1.0.69"
quote = "1.0.33"
reqwest = { version = "0.11.22", features = ["json"] }
serde_json = "1.0.108"
syn = { version = "2.0.39", features = ["full"] }
tokio = { version = "1.33.0", features = ["full"] }
my_proc_macro = { path = "/mnt/c/Users/user/rust_projects/syntax_ground/my_proc_macro" }
```

